--- a/Cenario1/style.css
+++ b/Cenario1/style.css
@@ -19,7 +19,7 @@ body {
 h1 {
   margin-bottom: 20px;
 }
-
+/*
 #contador {
   font-size: 48px;
   margin-bottom: 20px;
@@ -40,3 +40,4 @@ h1 {
 #botao:hover {
   background-color: #45a049;
 }
+*/
