--- a/Cenario1/style.css
+++ b/Cenario1/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
+  background-color: #4db2f5;
   margin: 0;
   display: flex;
   justify-content: center;
@@ -9,11 +9,12 @@ body {
 }
 
 .container {
-  background-color: #fff;
+  background-color: #00000050;
   padding: 30px;
   border-radius: 10px;
   text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  color: white;
 }
 
 h1 {
